...
  private func configureAccessibility(viewModel: ExchangeDetailViewModel) {
    scrollView.isAccessibilityElement = false
    contentView.isAccessibilityElement = false
    mainStackView.isAccessibilityElement = false
    
    nameLabel.isAccessibilityElement = true
    nameLabel.accessibilityIdentifier = "exchange_name_label"
    
    descriptionLabel.isAccessibilityElement = true
    descriptionLabel.accessibilityIdentifier = "exchange_description_label"
    
    websiteLabel.isAccessibilityElement = true
    websiteLabel.accessibilityIdentifier = "exchange_website_label"
    websiteLabel.accessibilityLabel = viewModel.websiteUrl
    websiteLabel.accessibilityTraits = .link
    
...
